[tool.poetry]
name = "unit-literals"
version = "0.1.0"
description = ""
authors = ["Adam Hupp <adam@hupp.org>"]
packages = [{include = "unit_literals"}]

[tool.poetry.dependencies]
python = ">=3.8, < 4"
Pint = "^0.17"


[tool.poetry.dev-dependencies]
pegen = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
