[tool.poetry]
name = "literal-units-test-ipython-5"
version = "0.1.0"
description = ""
authors = ["Adam Hupp <adam@hupp.org>"]

[tool.poetry.dependencies]
python = ">= 3.8, < 4"
literal_units = { path = "../../" }
ipython = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
